# blockattack-game

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ReleaseNotes-2.0.0-SNAPSHOT-2016-03-20.txt  ReleaseNotes-2.0.0.txt  ReleaseNotes-2.0.1.txt  ReleaseNotes-2.1.0.txt  ReleaseNotes-2.1.1.txt  ReleaseNotes-2.1.2.txt  ReleaseNotes-2.2.0.txt  ReleaseNotes-2.3.0.txt  ReleaseNotes-2.4.0.txt  ReleaseNotes-2.5.0.txt  ReleaseNotes-2.6.0.txt  SConstruct  packdata.sh  travis_build.script
.github/actions/: ci.yml
.github/workflows/: main.yml
Game/: SConscript
Game/data/misc/: AUTHORS  stage_clear_par.json
Game/data/sprites/: blockattack.sprite  blockattack1.sprite  gui_rect_white.sprite  sample_alt_gfx.sprite
Game/mods/1.3.0.bricks.data/modinfo/: 1.3.0.bricks.json
Game/mods/1.3.0.bricks_unpacked.data/: README.md
Game/themes/: default
man/: README  SConscript  blockattack.man  blockattack.sgml
source/: AUTH
source/code/: .editorconfig  AUTHORS  BallManager.hpp  BlockAttackWin32.dev  BlockGame.cpp  BlockGame.hpp  BlockGameSdl.hpp  BlockGameSdl.inc  CppSdlException.cpp  CppSdlException.hpp  CppSdlImageHolder.cpp  CppSdlImageHolder.hpp  DialogBox.cpp  DialogBox.hpp  ExplosionManager.hpp  FontWrapper.hpp  HelpAboutState.cpp  HelpAboutState.hpp  HelpCommon.cpp  HelpCommon.hpp  HelpGamepadState.cpp  HelpGamepadState.hpp  HelpHowtoState.cpp  HelpHowtoState.hpp  HelpModInfoState.cpp  HelpModInfoState.hpp  Makefile  MenuSystem.cc  MenuSystem.cpp  MenuSystem.h  ModConfigMenuState.cpp  ModConfigMenuState.hpp  ModInfo.cpp  ModInfo.hpp  NetworkThing.hpp  README  ReadKeyboard.cpp  ReadKeyboard.h  ReplayPlayer.cpp  ReplayPlayer.hpp  (+59 more)
source/code/CppSdl/: CppSdlCommon.cpp  CppSdlCommon.hpp  CppSdlException.cpp  CppSdlException.hpp  CppSdlFrame.cpp  CppSdlFrame.hpp  CppSdlImageHolder.cpp  CppSdlImageHolder.hpp  CppSdlSprite.cpp  CppSdlSprite.hpp  CppSdlTile.cpp  CppSdlTile.hpp  Makefile
source/code/Libs/: .editorconfig  NFont.cpp  NFont.h  SDL_FontCache.c
source/code/Libs/include/cereal/: ABOUT
source/code/editor/: BoardHolder.cpp  BoardHolder.hpp  EditorInterface.cpp  EditorInterface.hpp  SagoTextureSelector.cpp  SagoTextureSelector.hpp  TheBoard.cpp  TheBoard.hpp  editorMain.cpp  editorMain.hpp  editor_loader.cpp  editor_loader.hpp
source/code/menu/: MenuItem.hpp  MenuItemCommand.cpp  MenuItemCommand.hpp
source/code/puzzle_editor/: PuzzleEditorState.cpp  PuzzleEditorState.hpp
source/code/sago/: GameStateInterface.hpp  Makefile.sago  SagoDataHolder.cpp  SagoDataHolder.hpp  SagoLogicalResize.hpp  SagoMisc.cpp  SagoMisc.hpp  SagoMiscSdl2.cpp  SagoMiscSdl2.hpp  SagoSprite.cpp  SagoSprite.hpp  SagoSpriteHolder.cpp  SagoSpriteHolder.hpp  SagoTextBox.cpp  SagoTextBox.hpp  SagoTextField.cpp  SagoTextField.hpp  platform_folders.cpp  platform_folders.h
source/code/theme_editor/: ThemeEditorState.cpp  ThemeEditorState.hpp
source/manual/: block_attack_manual.tex
source/misc/: blockattack.desktop  install_script.nsi  net.blockattack.game.metainfo.xml
source/misc/astyle/: runAstyle.sh
source/misc/cmake/: FindSDL2.cmake  LibFindMacros.cmake
source/misc/docker/: Dockerfile.Fedora25build  Dockerfile.Fedora29build  Dockerfile.Fedora42build  Dockerfile.Ubuntu12.04build_Standalone  Dockerfile.Ubuntu14.04build  Dockerfile.Ubuntu14.04build_Standalone  Dockerfile.Ubuntu14.04build_Standalone32  Dockerfile.Ubuntu16.04build  Dockerfile.Ubuntu16.04build_Standalone  Dockerfile.Ubuntu16.04build_Standalone32  Dockerfile.Ubuntu18.04build  Dockerfile.Ubuntu18.04build_Standalone  Dockerfile.Ubuntu20.04build  Dockerfile.Ubuntu22.04build  Dockerfile.WindoesBuild
source/misc/embedded_libs/PlatformFolders-4.2.0/: CMakeLists.txt
source/misc/icons/: blockattack.xpm  blockattack128.xpm  blockattack16.xpm  blockattack256.xpm  blockattack32.xpm  blockattack48.xpm  blockattack64.xpm
source/misc/lint/: runLint.sh
source/misc/scripts/: update_version.sh
source/misc/standalone/: README.txt  blockattack_standalone_launcher  build_standalone.sh  compile_requirements.sh  install_requirements.sh
source/misc/translation/: build_mo_all.sh  build_mo_single_file.sh  extractTexts.sh
source/misc/translation/po/: da.po  da_DK.po  sv.po
source/misc/translation/template/: blockattack_roftb.pot
windows installer/: install_script.nsi
